--- a/client/index.html
+++ b/client/index.html
@@ -434,6 +434,7 @@ Mozilla presents an HTML5 mini-MMORPG by Little Workshop http://www.littleworksh
     <script>
       var require = { waitSeconds: 60 };
     </script>
-    <script data-main="js/home" src="js/lib/require-jquery.js"></script>
+    <!-- <script data-main="js/home" src="js/lib/require-jquery.js"></script> -->
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
